Updated pom.xml to include License, name, description and url

--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,20 @@
     <artifactId>warhuhn-spark-template-jtwig</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <name>warhuhn-spark-template-jtwig</name>
+    <description>
+        JTwig Template View Engine implementation for Spark
+    </description>
+    <url>https://github.com/warhuhn/warhuhn-spark-template-jtwig</url>
+
+    <licenses>
+        <license>
+            <name>Apache License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
     <dependencies>
         <dependency>
             <groupId>com.sparkjava</groupId>
